# exchange-core

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
scripts/: watch.sh
src/: main.cpp
src/app/: main.cpp
src/exchange/core/: constants.hpp  core_types.hpp  gsl.hpp  matching_engine.hpp  pch.hpp
src/exchange/util/: scope_timer.cpp  scope_timer.hpp
tests/data/: input.csv  trade_history.csv
